--- a/lambda-layer-CIH/nodejs/package.json
+++ b/lambda-layer-CIH/nodejs/package.json
@@ -9,6 +9,7 @@
   "author": "Bhavin Agarwal",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "pg": "^7.14.0"
   }
 }
